Conf-AmonNG
8/09/08 (sam)
- interface : 	- ajout paramètres gateway au niveau vlan et alias eth0 pour multi-routeur
		- alias interface completement parametrable

15/07/2008
- changement de syslog-ng par rsyslog
- ajout du dictionnaire 1_logs.xml

09/06/2008
- squid.conf: ajout d'un deuxieme fichiers (utilisateur) pour les noauth et nocache
- prereconf: ajout d'un touch vers les deux fichiers domaines_noauth_user et domaines_nocache_user

6/06/2008
- magic_rvp.py: /etc/init.d/rvp restart au lieu de service rvp restart

3/06/08 (sam)
hosts : correction bug cosmetique -> pas d'alias lorsqu'on utilise des domaines supplémentaires car ils existent déjà dans le domaine principal

30/05/2008
- ajout de template en fonction du mode (défaut, modérateur, interdit, liste blanche) avec couleur en concordance avec l'EAD2

28/05/2008
- hosts : ajout d'un alias si le serveur d'authentification NTLM et ScribeDMZ sont la même machine renseignée avec un nom différent (nom machine et nom machine SMB) + ajout possibilite d'un domaine local supplémentaire
- firewall.stop : pb regle prerouting et postrouting. Politique par defaut en DROP !
- bug 571 : un seul manage-amon
- StartQos.sh : suppression du flush des tables mangle

27/05/08 (sam, k)
- killp2p : "exit 0" a la place de "exit 1" dans "start" si p2p est desactive
- magic-rvp : correction bug 858

26/05/08 (j)
 - bug 863 : correction de gen_ipsec-policy avec plusieurs vlans

21/05/08 (sam)
dico + interface : ajout de paramètres en mode expert pour prendre en compte le débit et le type de negociation au niveau des interfaces (bug 801)

20/05/2008 (j)
- 1_authentification.xml : variables NTLM en multi + modif squid.conf et hosts

16/05/08 (sam, k)
- squid.conf : ajout d'acls permettant de de ne pas authentifier et/ou cacher certains sites. Acl lu dans 2 fichiers (nouvellement créé) domaines_noauth et domaines_nocache
- squid.conf : activation de l'authentification sur pedago ET admin avec NTLM multi-serveur

13/05/08 (sam, k)